[package]
name = "raw-window-handle-ffi"
description = "FFI types meant to make raw-window-handle types FFI-compatible."
version = "0.1.0"
edition = "2024"
authors = ["Redchin Daniil <redchindaniil@gmail.com>"]
repository = "https://github.com/USSURATONCACHI/raw-window-handle-ffi"
license-file = "LICENSE"
keywords = ["raw-window-handle", "window-handle", "ffi", "C"]
categories = ["development-tools::ffi"]

[dependencies]
cbindgen = "0.28.0"
raw-window-handle = "0.6.*"
thiserror = "2.0.12"
